--- a/index.html
+++ b/index.html
@@ -1,1 +1,35 @@
 
+<!DOCTYPE html>
+<html lang="ja">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>My GitHub Page</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>ようこそ！</h1>
+    <nav>
+      <a href="#about">About</a> |
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <main>
+    <section id="about">
+      <h2>このページについて</h2>
+      <p>これはGitHub Pagesで公開されているサンプルページです。</p>
+    </section>
+
+    <section id="contact">
+      <h2>連絡先</h2>
+      <p>Email: example@example.com</p>
+    </section>
+  </main>
+
+  <footer>
+    <p>&copy; 2025 My GitHub Page</p>
+  </footer>
+</body>
+</html>
