Update title and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My GitHub Page</title>
+  <title>reuse-ay GitHub Page</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -24,7 +24,7 @@
 
     <section id="contact">
       <h2>連絡先</h2>
-      <p>Email: example@example.com</p>
+      <a href="https://www.linkedin.com/in/r-s-225175284/">LinkedIn</p>
     </section>
   </main>
 
