--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <section id="contact">
       <h2>連絡先</h2>
-      <a href="https://www.linkedin.com/in/r-s-225175284/">LinkedIn</p>
+      <a href="https://www.linkedin.com/in/r-s-225175284/">LinkedIn</a>
     </section>
   </main>
 
