Update LinkedIn URL in contact section

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section id="contact">
       <h2>連絡先</h2>
-      <a href="https://www.linkedin.com/in/r-s-225175284/">LinkedIn</a>
+      <a href="https://www.linkedin.com/in/r-y225175284/">LinkedIn</a>
     </section>
   </main>
 
